# checkpoint16

eight_trajectory/: CMakeLists.txt  package.xml
eight_trajectory/launch/: eight_trajectory.launch.py
eight_trajectory/src/: eight_trajectory.cpp
kinematic_model/: CMakeLists.txt  package.xml
kinematic_model/launch/: kinematic_model.launch.py
kinematic_model/src/: kinematic_model.cpp
wheel_velocities_publisher/: CMakeLists.txt
wheel_velocities_publisher/src/: wheel_velocities_publisher.cpp
